--- a/less/navbar.less
+++ b/less/navbar.less
@@ -60,6 +60,7 @@
   &:hover {
     text-decoration: none;
   }
+  .brand-text{display:none;}
 }
 .lt-ie9{
 	.navbar {
@@ -284,7 +285,7 @@
 
 	/* SVG Logo */
 	.navbar .nat-logo {
-		width:40px;
+		width:60px;
 		position: absolute;
 		left:15px;
 		top:2px;
@@ -496,8 +497,9 @@
 
   .brand {
     color: @navbarInverseBrandColor;
-	margin-top:10px;
+	margin-top:0px;
 	position: relative;
+	z-index:2;
   }
 
   .navbar-text {
